// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render loading 1`] = `
<Loader
  noAnimation={false}
  overlay={true}
  visible={false}
/>
`;

exports[`should render loading 1`] = `
<Loader
  noAnimation={false}
  overlay={true}
  visible={true}
/>
`;
